# cuda-kernel

./: .gitignore  CMakeLists.txt  ENHANCEMENT_SUMMARY.md  GPU_PROJECT_STATUS.md  GUI_STREAMLINING.md  HIP_BUILD_SUCCESS_SUMMARY.md  README.md  TAB_ANALYSIS.md  UNIFIED_BUILD_SUMMARY.md  build_kernels_safely.sh  fix_verification_final.sh  launch_gui.sh  run.sh  scripts_organization_summary.sh  verify_no_tests_tab.sh  verify_tests_removal.sh
.cache/clangd/index/: advanced_threading_hip_safe.hip.7310C65A0AF4FBFE.idx  convolution_hip.hip.24444B6C67AABDBB.idx  dynamic_memory_hip.hip.D31D016E6BBCBC70.idx  example_loader.cpp.50740E50AD0F1319.idx  example_loader.h.930EE86ADA0F2E75.idx  example_tabs.cpp.A6935DFC543454A4.idx  example_tabs.h.B47E21D6BD65BCD7.idx  fft3d_hip.hip.BBC20FF3CF73CB5B.idx  helper_functions.cpp.2D58BB38627BDC3B.idx  helper_functions.h.46A8FBECFE6F3929.idx  hip_utils.cpp.9535D008A45A28A7.idx  hip_utils.h.99CCA9C6A662C88E.idx  kernel_runner.cpp.977CE1BCF44BBC24.idx  kernel_runner.h.B52F3AD117813A91.idx  main.cpp.9CA23F1C876BC2B3.idx  main_hip.cpp.01A34D7067587A06.idx  main_hip.cpp.15DA028F98016AD8.idx  main_hip.cpp.77C72E35D78F8600.idx  main_hip.cpp.83B413A0642D2D0F.idx  main_hip.cpp.91B593474364850A.idx  main_hip.cpp.9B1638BAE7E638B6.idx  main_hip.cpp.F6D95B1CA50467C5.idx  main_hip_safe.cpp.1BB0A6C0F58F149A.idx  mainwindow.cpp.5C3184C9F7CC8FD7.idx  mainwindow.h.C5BA1560577B8726.idx  matrix_mul_hip.hip.3051F59AED455B58.idx  monte_carlo_hip.hip.46F4678B5F8E7E94.idx  nbody_hip.hip.B72DC3CE1B6F246E.idx  performance_widget.cpp.D378659F38344F18.idx  performance_widget.h.B1B44CAC0712FE79.idx  reduction_hip.hip.50576221D2AE9392.idx  result_viewer.cpp.AFD14C078474A3BC.idx  result_viewer.h.F59288A55F489CB9.idx  timer.cpp.E17409ADCC91E11C.idx  timer.h.DD7BFCB2AE43BCC4.idx  vector_addition_hip.hip.059B037720975960.idx  warp_primitives_hip.hip.D82347E5EC896B9B.idx
.copilot/: README.md  instructions.md
.github/workflows/: ci.yml  cuda-build.yml.disabled
build_gui/: Makefile
build_gui/.qt/: QtDeploySupport.cmake
build_gui/gpu_kernel_gui_autogen/: deps  moc_predefs.h
build_gui/gpu_kernel_gui_autogen/EWIEGA46WW/: moc_example_tabs.cpp  moc_example_tabs.cpp.d  moc_kernel_runner.cpp  moc_kernel_runner.cpp.d  moc_mainwindow.cpp.d  moc_performance_widget.cpp.d  moc_result_viewer.cpp  moc_result_viewer.cpp.d  moc_test_runner.cpp  moc_test_runner.cpp.d
build_gui/gpu_kernel_gui_autogen/include/: example_tabs.moc.d  ui_mainwindow.h
build_gui_test/: Makefile
build_gui_test/gpu_kernel_gui_autogen/: deps  mocs_compilation.cpp
build_gui_test/gpu_kernel_gui_autogen/DMHXEJ42XS/: moc_example_tabs.cpp.d  moc_kernel_runner.cpp.d  moc_mainwindow.cpp.d  moc_performance_widget.cpp.d  moc_result_viewer.cpp.d  moc_test_runner.cpp.d
build_simple/: Makefile
build_simple/.qt/: QtDeploySupport.cmake
build_simple/gui/: Makefile
build_simple/gui/gpu_kernel_gui_autogen/: deps  (+2 more)
build_unified/: Makefile  compile_commands.json
build_unified/.qt/: QtDeploySupport.cmake
build_unified/gpu_kernel_gui_autogen/: deps
data/: README.md
data/examples/: 2d_convolution.xml  3d_fft.xml  advanced_fft.xml  advanced_threading.xml  dynamic_memory.xml  examples_list.xml  matrix_multiplication.xml  monte_carlo.xml  nbody_simulation.xml  parallel_reduction.xml  vector_addition.xml  vector_addition_backup.xml  warp_primitives.xml
docs/: ADVANCED_THREADING_DESCRIPTIONS.md  ADVANCED_THREADING_STABILIZATION.md  BUILD_GUI_STATUS.md  CRITICAL_GUI_FIX.md  FINAL_GUI_FIX.md  GPU_SAFETY_GUIDE.md  GUI_DESCRIPTIONS_IMPROVEMENT.md  GUI_KERNEL_FIX.md  ORGANIZATION_COMPLETE.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  README_IMPROVEMENTS.md  XML_SYSTEM_IMPLEMENTATION.md  XML_SYSTEM_SUCCESS.md  industry-requirements.md
docs/installation/: rocm-setup.md
docs/performance/: optimization-guide.md
docs/theory/: cuda-fundamentals.md
gui/: CMakeLists.txt  README.md  example_loader.cpp  example_loader.h  example_tabs.cpp  example_tabs.h  kernel_runner.cpp  kernel_runner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  performance_widget.cpp  performance_widget.h  resources.qrc  result_viewer.cpp  result_viewer.h
screenshots/: README.md
scripts/: README.md  build.sh  build_hip.sh  build_hybrid.sh  build_unified.sh  build_working.sh  capture_additional_screenshots.sh  debug_gui_paths.sh  fix_hip_builds.sh  launch_gui.sh  profile.sh  run_gui_clean.sh  save_screenshot.sh  setup_gpu_platform.sh  setup_gui.sh  simulate_gui_execution.sh  test.sh
scripts/debugging/: debug_warp_primitives.sh
scripts/gui/: launch_gui_clean.sh  launch_working_gui.sh  run_gui_amd.sh
scripts/screenshots/: take_screenshots.sh
scripts/testing/: comprehensive_gui_test.sh  quick_gui_test.sh  verify_executable_discovery.sh
scripts/verification/: final_gui_report.sh  final_status_check.sh  final_verification_complete.sh  verify_project_organization.sh  verify_safe_advanced_threading.sh
src/01_vector_addition/: README.md  main.cpp  main_hip.cpp  vector_addition.cu  vector_addition_hip.hip
src/02_matrix_multiplication/: README.md  main.cpp  main_hip.cpp  matrix_mul.cu  matrix_mul.h  matrix_mul_hip.hip
src/03_parallel_reduction/: README.md  main.cpp  main_hip.cpp  reduction.cu  reduction.h  reduction_hip.hip
src/04_convolution_2d/: README.md  convolution.cu  convolution.h  convolution_hip.hip  main.cpp  main_hip.cpp
src/05_monte_carlo/: main.cpp  main_hip.cpp  monte_carlo.cu  monte_carlo_hip.hip
src/06_advanced_fft/: fft_kernels.hip
src/07_advanced_threading/: README.md  advanced_threading_hip.hip  advanced_threading_hip_safe.hip  main_hip.cpp  main_hip_safe.cpp
src/08_dynamic_memory/: dynamic_memory_hip.hip  main_hip.cpp
src/09_warp_primitives/: README.md  main_hip.cpp  warp_primitives_hip.hip
src/10_advanced_fft/: README.md  fft3d_hip.hip  fft_kernels.hip  main_hip.cpp
src/11_nbody_simulation/: README.md  main_hip.cpp  nbody_hip.hip
src/common/: cuda_utils.cu  cuda_utils.h  gpu_utils.h  helper_functions.cpp  helper_functions.h  hip_utils.cpp  hip_utils.h  timer.cpp  timer.h
tests/: CMakeLists.txt
(+24 files in other folders)
